Heading alignment fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -617,6 +617,9 @@ body {
     .detail {
       padding-right: 2.5rem; } }
 
+.detail__heading {
+  width: 100%; }
+
 .detail__block {
   display: flex;
   flex-direction: column;
