--- a/public/scss/app/sections/detail.scss
+++ b/public/scss/app/sections/detail.scss
@@ -7,7 +7,7 @@
 }
 
 .detail__heading{
-
+    width: 100%;
 }
 
 .detail__block{
@@ -20,9 +20,9 @@
 }
 
 .detail__paragraph{
-    
+
 }
 
 .detail__image{
-    
+
 }
